argocd/aws/666628074417/clusters/cbioportal-prod/apps/slide-viewer/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slide-viewer-ingress-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: slide-viewer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
